Direwolf multi config for separated sound devices and several device types / brands

--- a/.env
+++ b/.env
@@ -45,7 +45,8 @@
 #NEXUS_PORT_JSONAPI=127.0.0.1:4281
 #NEXUS_PORT_JSONAPI=4281
 #NEXUS_RNODE_DEVICE=/dev/tty0
-#NEXUS_TNC_DEVICE=/dev/snd
+#NEXUS_SND_DEVICE=/dev/snd
+#NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #NEXUS_COMMAND=start_nexus_legacy.sh
 
 # Default reticulum configuration
@@ -56,13 +57,20 @@
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork
 #NOMADNET_AUTOSTART=True
 
-# Default direwolf configuration
+# Direwolf default configuration directory and startup mode
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
 #DIREWOLF_AUTOSTART=False
+#
+# Direwolf default interface name
+#DIREWOLF_INTERFACE_NAME=default
+#
+# Direwolf default interface device configuration
 #DIREWOLF_SOUND_CARD=1
 #DIREWOLF_DUAL_SOUND_CARD=No
 #DIREWOLF_INPUT_SOUND_CARD=1
 #DIREWOLF_OUTPUT_SOUND_CARD=1
+#
+# Direwolf default amixer content values
 #DIREWOLF_MIC_CAPTURE_SWITCH=on
 #DIREWOLF_MIC_CAPTURE_VOLUME=80%
 #DIREWOLF_MIC_PLAYBACK_SWITCH=off
