--- a/nexus_root/.direwolf/_template_direwolf.conf
+++ b/nexus_root/.direwolf/_template_direwolf.conf
@@ -1,9 +1,3 @@
-# PTT /dev/ttyUSB1 RTS
-# DWAIT 10
-# PBEACON delay=0:10 every=30 overlay=S symbol="/-" lat=49^52.20 long=8^37.30 power=8 height=20 gain=2 dest=CQ messaging=1 comment="RNS Test Station Darmstadt"
-# OBEACON delay=0:10 every=1 OBJNAME=NexusDA01 lat=49^52.20 long=8^37.30 SYMBOL=/r FREQ=26.686 power=8 height=20 gain=2 dest=CQ messaging=1 comment="Nexus Test Station Darmstadt"
-
-
 #############################################################
 #                                                           #
 #               Configuration file for Dire Wolf            #
@@ -144,7 +138,7 @@ CHANNEL 0
 # Example (don't use this unless you are me):  MYCALL	WB2OSZ-5
 #
 
-MYCALL N1CALL
+MYCALL NOCALL
 
 #
 # Pick a suitable modem speed based on your situation.
