--- a/nexus_root/.direwolf/default.conf
+++ b/nexus_root/.direwolf/default.conf
@@ -3,7 +3,7 @@
 #
 ADEVICE  plughw:0,0
 CHANNEL 0
-MYCALL N1CALL
+MYCALL NOCALL
 
 ###########################################
 # RPi4B mit Yaesu FT991A using USB CAT
@@ -11,7 +11,7 @@ MYCALL N1CALL
 # ADEVICE  plughw:1,0
 # CHANNEL 0
 # MYCALL N1CALL
-# PTT /dev/ttyUSB1 RTS
+# PTT /dev/ttyCAT RTS
 
 ###########################################
 # OPI4 mit zwei Millso USB Sound Karten (2 physische Kanäle kein Echo Problem)
