Direwolf multi config for separated sound devices and several device types / brands

--- a/.env
+++ b/.env
@@ -103,43 +103,70 @@
 #DJANGO_SUPERUSER_EMAIL=admin@example.com
 #DJANGO_LOG_LEVEL=debug
 
-# My personal non default development configuration
-# This section can be safely removed
-#NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#COMPOSE_PROFILES=auto-update
-#WATCHTOWER_POLL_INTERVAL=300
-#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
-
 # My personal default development configuration
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
+
+# Cockpit
+#COMPOSE_PROFILES=auto-update
+#WATCHTOWER_POLL_INTERVAL=300
+#NEXUS_WATCHTOWER=nexus-watchtower_cockpit
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/nexus_cockpit
-NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd63
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
 #NEXUS_CONTAINER=nexus-cockpit
 #NEXUS_CONTAINER_ALIAS=nexus-cockpit
 #NEXUS_NETWORK=nexus-cockpit_net
-#NEXUS_PORT_RNSAPI=4255
-#NEXUS_PORT_WEB=127.0.0.1:4285
-#NEXUS_PORT_JSONAPI=127.0.0.1:4345
-#NEXUS_ASPECT=cockpit
+#NEXUS_ASPECT=cocpit
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"cluster":"cockpit"}
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
-DIREWOLF_CONFIG=/home/bsb/.direwolf
+
+# OPI4
+#RNS_AUTOSTART=True
+#NOMADNET_AUTOSTART=True
+#NEXUS_COMPOSE_HOME=~/nexus
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#NEXUS_CONTAINER=nexus-orangepi
+#NEXUS_CONTAINER_ALIAS=nexus-orangepi
+#NEXUS_NETWORK=nexus-orange_net
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=70
+#DIREWOLF_AUTOSTART=True
+#DIREWOLF_DEVICE_NAME=Millso_Dual
+#DIREWOLF_DUAL_SOUND_CARD=Yes
+#DIREWOLF_INPUT_SOUND_CARD=3
+#DIREWOLF_OUTPUT_SOUND_CARD=2
+#DIREWOLF_MIC_CAPTURE_SWITCH=on
+#DIREWOLF_MIC_CAPTURE_VOLUME=80%
+#DIREWOLF_MIC_PLAYBACK_SWITCH=off
+#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
+#DIREWOLF_AUTO_GAIN_CONTROL=off
+#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
+#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
+
+# Radiobox
+RNS_AUTOSTART=True
+NOMADNET_AUTOSTART=True
+NEXUS_COMPOSE_HOME=~/bsb.nexus
+NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
+NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
+NEXUS_CONTAINER=nexus-delta
+NEXUS_CONTAINER_ALIAS=nexus-delta
+NEXUS_NETWORK=nexus-delta_net
+NEXUS_ASPECT=delta
+NEXUS_LONGPOLL=60
+NEXUS_TIMEOUT=70
+NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+NEXUS_RNODE_DEVICE=/dev/ttyACM0
+NEXUS_CAT_DEVICE=/dev/ttyUSB1
 DIREWOLF_AUTOSTART=True
+DIREWOLF_DEVICE_NAME=Yaesu_FT-991A
 DIREWOLF_SOUND_CARD=1
-DIREWOLF_DUAL_SOUND_CARD=Yes
-DIREWOLF_INPUT_SOUND_CARD=3
-DIREWOLF_OUTPUT_SOUND_CARD=2
-DIREWOLF_MIC_CAPTURE_SWITCH=on
-DIREWOLF_MIC_CAPTURE_VOLUME=80%
-DIREWOLF_MIC_PLAYBACK_SWITCH=off
-DIREWOLF_MIC_PLAYBACK_VOLUME=0%
-DIREWOLF_AUTO_GAIN_CONTROL=off
-DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
-DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
+DIREWOLF_PCM_PLAYBACK_SWITCH=on
+DIREWOLF_PCM_PLAYBACK_VOLUME=80%
