Direwolf additional options

--- a/.env
+++ b/.env
@@ -167,6 +167,7 @@ NEXUS_RNODE_DEVICE=/dev/ttyACM0
 NEXUS_CAT_DEVICE=/dev/ttyUSB1
 DIREWOLF_AUTOSTART=True
 DIREWOLF_INTERFACE_NAME=Yaesu_FT-991A
+DIREWOLF_OPTIONS="-x h"
 DIREWOLF_SOUND_CARD=1
 DIREWOLF_PCM_PLAYBACK_SWITCH=on
 DIREWOLF_PCM_PLAYBACK_VOLUME=80%
