--- a/nexus_root/.direwolf/Behringer_UMC22.conf
+++ b/nexus_root/.direwolf/Behringer_UMC22.conf
@@ -2,15 +2,15 @@
 # OPI4 with two Millso USB Sound Cards
 # ADEVICE <input> <output>
 #
-ADEVICE plughw:3,0 plughw:2,0
-MYCALL N1CALL
-CHANNEL 0
+ADEVICE plughw:2,0
+ACHANNELS 2
 
+CHANNEL 0
+MYCALL N1CALL
 MODEM 1200
 FULLDUP OFF
 
 ###########################################
 # 10s Test Beacon
 #
-# OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
-
+OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
