--- a/nexus_root/.direwolf/Yaesu_FT-991A.conf
+++ b/nexus_root/.direwolf/Yaesu_FT-991A.conf
@@ -12,5 +12,5 @@ FULLDUP OFF
 ###########################################
 # 10s Test Beacon
 #
-OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+# OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
