--- a/.env
+++ b/.env
@@ -59,6 +59,7 @@
 
 # Direwolf default configuration directory and startup mode
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
+#DIREWOLF_OPTIONS="-x h"
 #DIREWOLF_AUTOSTART=False
 #
 # Direwolf default interface name
@@ -126,7 +127,7 @@
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
 
-# OPI4
+# OPI4 Dual Millso
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/nexus
@@ -138,6 +139,7 @@
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 #DIREWOLF_AUTOSTART=True
+#DIREWOLF_OPTIONS="-x h"
 #DIREWOLF_INTERFACE_NAME=Millso_Dual
 #DIREWOLF_DUAL_SOUND_CARD=Yes
 #DIREWOLF_INPUT_SOUND_CARD=3
@@ -150,25 +152,42 @@
 #DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
 #DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
 
-# Radiobox
+# OPI4 Behringer UMC22
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
-NEXUS_COMPOSE_HOME=~/bsb.nexus
-NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
-NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
-NEXUS_CONTAINER=nexus-delta
-NEXUS_CONTAINER_ALIAS=nexus-delta
-NEXUS_NETWORK=nexus-delta_net
-NEXUS_ASPECT=delta
+NEXUS_COMPOSE_HOME=~/nexus
+NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+NEXUS_CONTAINER=nexus-orangepi
+NEXUS_CONTAINER_ALIAS=nexus-orangepi
+NEXUS_NETWORK=nexus-orange_net
 NEXUS_LONGPOLL=60
 NEXUS_TIMEOUT=70
-NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
-NEXUS_RNODE_DEVICE=/dev/ttyACM0
-NEXUS_CAT_DEVICE=/dev/ttyUSB1
 DIREWOLF_AUTOSTART=True
-DIREWOLF_INTERFACE_NAME=Yaesu_FT-991A
 DIREWOLF_OPTIONS="-x h"
-DIREWOLF_SOUND_CARD=1
+DIREWOLF_INTERFACE_NAME=Behringer_UMC22
+DIREWOLF_SOUND_CARD=2
 DIREWOLF_PCM_PLAYBACK_SWITCH=on
 DIREWOLF_PCM_PLAYBACK_VOLUME=80%
 
+# Radiobox
+#RNS_AUTOSTART=True
+#NOMADNET_AUTOSTART=True
+#NEXUS_COMPOSE_HOME=~/bsb.nexus
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
+#NEXUS_CONTAINER=nexus-delta
+#NEXUS_CONTAINER_ALIAS=nexus-delta
+#NEXUS_NETWORK=nexus-delta_net
+#NEXUS_ASPECT=delta
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=70
+#NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+#NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#NEXUS_CAT_DEVICE=/dev/ttyUSB1
+#DIREWOLF_AUTOSTART=True
+#DIREWOLF_OPTIONS="-x h"
+#DIREWOLF_INTERFACE_NAME=Yaesu_FT-991A
+#DIREWOLF_SOUND_CARD=1
+#DIREWOLF_PCM_PLAYBACK_SWITCH=on
+#DIREWOLF_PCM_PLAYBACK_VOLUME=80%
