--- a/.env
+++ b/.env
@@ -59,7 +59,7 @@
 
 # Direwolf default configuration directory and startup mode
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
-#DIREWOLF_OPTIONS="-x h"
+#DIREWOLF_OPTIONS=-xh
 #DIREWOLF_AUTOSTART=False
 #
 # Direwolf default interface name
@@ -139,7 +139,7 @@
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 #DIREWOLF_AUTOSTART=True
-#DIREWOLF_OPTIONS="-x h"
+#DIREWOLF_OPTIONS=-xh
 #DIREWOLF_INTERFACE_NAME=Millso_Dual
 #DIREWOLF_DUAL_SOUND_CARD=Yes
 #DIREWOLF_INPUT_SOUND_CARD=3
@@ -164,7 +164,7 @@ NEXUS_NETWORK=nexus-orange_net
 NEXUS_LONGPOLL=60
 NEXUS_TIMEOUT=70
 DIREWOLF_AUTOSTART=True
-DIREWOLF_OPTIONS="-x h"
+DIREWOLF_OPTIONS=-xh
 DIREWOLF_INTERFACE_NAME=Behringer_UMC22
 DIREWOLF_SOUND_CARD=2
 DIREWOLF_PCM_PLAYBACK_SWITCH=on
@@ -186,7 +186,7 @@ DIREWOLF_PCM_PLAYBACK_VOLUME=80%
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #NEXUS_CAT_DEVICE=/dev/ttyUSB1
 #DIREWOLF_AUTOSTART=True
-#DIREWOLF_OPTIONS="-x h"
+#DIREWOLF_OPTIONS=-xh
 #DIREWOLF_INTERFACE_NAME=Yaesu_FT-991A
 #DIREWOLF_SOUND_CARD=1
 #DIREWOLF_PCM_PLAYBACK_SWITCH=on
