--- a/.env
+++ b/.env
@@ -164,7 +164,7 @@ NEXUS_NETWORK=nexus-orange_net
 NEXUS_LONGPOLL=60
 NEXUS_TIMEOUT=70
 DIREWOLF_AUTOSTART=True
-DIREWOLF_OPTIONS="-x h"
+DIREWOLF_OPTIONS="-q d"
 DIREWOLF_INTERFACE_NAME=Behringer_UMC22
 DIREWOLF_SOUND_CARD=2
 DIREWOLF_PCM_PLAYBACK_SWITCH=on
