--- a/nexus_root/.direwolf/Behringer_UMC22.conf
+++ b/nexus_root/.direwolf/Behringer_UMC22.conf
@@ -5,7 +5,14 @@
 ADEVICE plughw:2,0
 ACHANNELS 2
 
-CHANNEL 0
+# Left Channel (Mic/Line 1 Socket)
+#CHANNEL 0
+#MYCALL N1CALL
+#MODEM 1200
+#FULLDUP OFF
+
+# Right Channel (Inst 2 Socket)
+CHANNEL 1
 MYCALL N1CALL
 MODEM 1200
 FULLDUP OFF
