--- a/.env
+++ b/.env
@@ -104,6 +104,38 @@
 #DJANGO_SUPERUSER_EMAIL=admin@example.com
 #DJANGO_LOG_LEVEL=debug
 
+# Direwolf core options
+DIREWOLF_AUTOSTART=True
+DIREWOLF_OPTIONS="-q d"
+
+# Millso_Dual (Dual USB Device)
+# Uncomment and adjust if using this interface
+#DIREWOLF_INTERFACE_NAME=Millso_Dual
+#DIREWOLF_DUAL_SOUND_CARD=Yes
+#DIREWOLF_INPUT_SOUND_CARD=3
+#DIREWOLF_OUTPUT_SOUND_CARD=2
+#DIREWOLF_MIC_CAPTURE_SWITCH=on
+#DIREWOLF_MIC_CAPTURE_VOLUME=80%
+#DIREWOLF_MIC_PLAYBACK_SWITCH=off
+#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
+#DIREWOLF_AUTO_GAIN_CONTROL=off
+#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
+#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
+
+# Yaesu_FT-991A (CAT/USB CODEC)
+# Uncomment and adjust if using this interface
+#DIREWOLF_INTERFACE_NAME=Yaesu_FT-991A
+#DIREWOLF_SOUND_CARD=4
+#DIREWOLF_PCM_PLAYBACK_SWITCH=on
+#DIREWOLF_PCM_PLAYBACK_VOLUME=80%
+
+# Behringer_UMC22 (USB CODEC)
+# Uncomment and adjust if using this interface
+DIREWOLF_INTERFACE_NAME=Behringer_UMC22
+DIREWOLF_SOUND_CARD=2
+DIREWOLF_PCM_PLAYBACK_SWITCH=on
+DIREWOLF_PCM_PLAYBACK_VOLUME=80%
+
 # My personal default development configuration
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
@@ -127,32 +159,7 @@
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
 
-# OPI4 Dual Millso
-#RNS_AUTOSTART=True
-#NOMADNET_AUTOSTART=True
-#NEXUS_COMPOSE_HOME=~/nexus
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-#NEXUS_CONTAINER=nexus-orangepi
-#NEXUS_CONTAINER_ALIAS=nexus-orangepi
-#NEXUS_NETWORK=nexus-orange_net
-#NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=70
-#DIREWOLF_AUTOSTART=True
-#DIREWOLF_OPTIONS="-x h"
-#DIREWOLF_INTERFACE_NAME=Millso_Dual
-#DIREWOLF_DUAL_SOUND_CARD=Yes
-#DIREWOLF_INPUT_SOUND_CARD=3
-#DIREWOLF_OUTPUT_SOUND_CARD=2
-#DIREWOLF_MIC_CAPTURE_SWITCH=on
-#DIREWOLF_MIC_CAPTURE_VOLUME=80%
-#DIREWOLF_MIC_PLAYBACK_SWITCH=off
-#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
-#DIREWOLF_AUTO_GAIN_CONTROL=off
-#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
-#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
-
-# OPI4 Behringer UMC22
+# OPI4
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
 NEXUS_COMPOSE_HOME=~/nexus
@@ -163,12 +170,6 @@ NEXUS_CONTAINER_ALIAS=nexus-orangepi
 NEXUS_NETWORK=nexus-orange_net
 NEXUS_LONGPOLL=60
 NEXUS_TIMEOUT=70
-DIREWOLF_AUTOSTART=True
-DIREWOLF_OPTIONS="-q d"
-DIREWOLF_INTERFACE_NAME=Behringer_UMC22
-DIREWOLF_SOUND_CARD=2
-DIREWOLF_PCM_PLAYBACK_SWITCH=on
-DIREWOLF_PCM_PLAYBACK_VOLUME=80%
 
 # Radiobox
 #RNS_AUTOSTART=True
@@ -185,9 +186,3 @@ DIREWOLF_PCM_PLAYBACK_VOLUME=80%
 #NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #NEXUS_CAT_DEVICE=/dev/ttyUSB1
-#DIREWOLF_AUTOSTART=True
-#DIREWOLF_OPTIONS="-x h"
-#DIREWOLF_INTERFACE_NAME=Yaesu_FT-991A
-#DIREWOLF_SOUND_CARD=1
-#DIREWOLF_PCM_PLAYBACK_SWITCH=on
-#DIREWOLF_PCM_PLAYBACK_VOLUME=80%
