--- a/.env
+++ b/.env
@@ -153,8 +153,8 @@ DIREWOLF_PCM_PLAYBACK_VOLUME=80%
 #NEXUS_CONTAINER_ALIAS=nexus-cockpit
 #NEXUS_NETWORK=nexus-cockpit_net
 #NEXUS_ASPECT=cocpit
-#NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=70
+##NEXUS_LONGPOLL=60
+##NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"cluster":"cockpit"}
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
@@ -168,8 +168,8 @@ NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 NEXUS_CONTAINER=nexus-orangepi
 NEXUS_CONTAINER_ALIAS=nexus-orangepi
 NEXUS_NETWORK=nexus-orange_net
-NEXUS_LONGPOLL=60
-NEXUS_TIMEOUT=70
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=70
 
 # Radiobox
 #RNS_AUTOSTART=True
@@ -181,8 +181,8 @@ NEXUS_TIMEOUT=70
 #NEXUS_CONTAINER_ALIAS=nexus-delta
 #NEXUS_NETWORK=nexus-delta_net
 #NEXUS_ASPECT=delta
-#NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=70
+##NEXUS_LONGPOLL=60
+##NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #NEXUS_CAT_DEVICE=/dev/ttyUSB1
