--- a/nexus_root/.direwolf/Behringer_UMC22.conf
+++ b/nexus_root/.direwolf/Behringer_UMC22.conf
@@ -6,18 +6,28 @@ ADEVICE plughw:2,0
 ACHANNELS 2
 
 # Left Channel (Mic/Line 1 Socket)
-#CHANNEL 0
-#MYCALL N1CALL
-#MODEM 1200
-#FULLDUP OFF
+CHANNEL 0
+MYCALL N1CALL
+MODEM 1200
+FULLDUP OFF
+DWAIT 10
+SLOTTIME 30
+PERSIST 160
+TXDELAY 50
+TXTAIL 10
 
 # Right Channel (Inst 2 Socket)
 CHANNEL 1
 MYCALL N1CALL
 MODEM 1200
 FULLDUP OFF
+DWAIT 10
+SLOTTIME 30
+PERSIST 160
+TXDELAY 50
+TXTAIL 10
 
 ###########################################
 # 10s Test Beacon
 #
-OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+OBEACON comment="CB.ch52 Nexus Beacon #2" sendto=1 delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
