--- a/nexus_root/.direwolf/Millso_Dual.conf
+++ b/nexus_root/.direwolf/Millso_Dual.conf
@@ -5,9 +5,13 @@
 ADEVICE plughw:3,0 plughw:2,0
 MYCALL N1CALL
 CHANNEL 0
-
 MODEM 1200
 FULLDUP OFF
+DWAIT 10
+SLOTTIME 30
+PERSIST 160
+TXDELAY 50
+TXTAIL 10
 
 ###########################################
 # 10s Test Beacon
