--- a/nexus_root/.direwolf/Yaesu_FT-991A.conf
+++ b/nexus_root/.direwolf/Yaesu_FT-991A.conf
@@ -5,9 +5,13 @@ ADEVICE  plughw:1,0
 CHANNEL 0
 MYCALL N1CALL
 PTT /dev/ttyCAT RTS
-
 MODEM 1200
 FULLDUP OFF
+DWAIT 10
+SLOTTIME 30
+PERSIST 160
+TXDELAY 50
+TXTAIL 10
 
 ###########################################
 # 10s Test Beacon
