--- a/nexus_root/.direwolf/default.conf
+++ b/nexus_root/.direwolf/default.conf
@@ -1,49 +1,20 @@
 ###########################################
-# Default Konfiguration für interne Soundkarte
+# Default Configuration for internal souncard
 #
 ADEVICE  plughw:0,0
 CHANNEL 0
 MYCALL NOCALL
-
-###########################################
-# RPi4B mit Yaesu FT991A using USB CAT
-#
-# ADEVICE  plughw:1,0
-# CHANNEL 0
-# MYCALL N1CALL
-# PTT /dev/ttyCAT RTS
-
-###########################################
-# OPI4 mit zwei Millso USB Sound Karten (2 physische Kanäle kein Echo Problem)
-# ADEVICE <input> <output>
-#
-# ADEVICE plughw:3,0 plughw:2,0
-# MYCALL N1CALL
-# CHANNEL 0
-
-###########################################
-# OPI4 mit einer Millso USB Sound Karte (Echo Problematik)
-# ADEVICE plughw:2,0
-
-###########################################
-# Singnal und Protokoll Konfiguration
-
-MODEM 1200
-#MODEM 9600
-
-FULLDUP OFF
-
-# DWAIT 10
-# SLOTTIME 30
-# PERSIST 160
-# TXDELAY 50
-# TXTAIL 10
+DWAIT 10
+SLOTTIME 30
+PERSIST 160
+TXDELAY 50
+TXTAIL 10
 
 # AGWPORT 8000
 # KISSPORT 8001
 
 ###########################################
-# Test Bake
+# Test Beacon
 #
 # OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 # OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
