--- a/.env
+++ b/.env
@@ -168,6 +168,8 @@ NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 NEXUS_CONTAINER=nexus-orangepi
 NEXUS_CONTAINER_ALIAS=nexus-orangepi
 NEXUS_NETWORK=nexus-orange_net
+NEXUS_ASPECT=delta
+NEXUS_ROLE={"cluster":"lora"}
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 
@@ -181,8 +183,8 @@ NEXUS_NETWORK=nexus-orange_net
 #NEXUS_CONTAINER_ALIAS=nexus-delta
 #NEXUS_NETWORK=nexus-delta_net
 #NEXUS_ASPECT=delta
+#NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
 ##NEXUS_LONGPOLL=60
 ##NEXUS_TIMEOUT=70
-#NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #NEXUS_CAT_DEVICE=/dev/ttyUSB1
