--- a/nexus_root/.direwolf/Behringer_UMC22.conf
+++ b/nexus_root/.direwolf/Behringer_UMC22.conf
@@ -2,6 +2,11 @@
 # OPI4 with two Millso USB Sound Cards
 # ADEVICE <input> <output>
 #
+# DigiFace Mic Plug -> Mic/Line 1 Socket
+# DigiFace Speaker Plug -> Output 2
+# Preamp 1 50%
+# Preamp 2 0..75%
+
 ADEVICE plughw:2,0
 ACHANNELS 2
 
@@ -30,4 +35,4 @@ TXTAIL 10
 ###########################################
 # 10s Test Beacon
 #
-OBEACON comment="CB.ch52 Nexus Beacon #2" sendto=1 delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+# OBEACON comment="CB.ch52 Nexus Beacon #2" sendto=1 delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
