--- a/.env
+++ b/.env
@@ -59,7 +59,7 @@
 
 # Direwolf default configuration directory and startup mode
 #DIREWOLF_CONFIG=/home/bsb/.direwolf
-#DIREWOLF_OPTIONS=-xh
+#DIREWOLF_OPTIONS=-q dx
 #DIREWOLF_AUTOSTART=False
 #
 # Direwolf default interface name
@@ -106,7 +106,7 @@
 
 # Direwolf core options
 DIREWOLF_AUTOSTART=True
-DIREWOLF_OPTIONS="-q d"
+DIREWOLF_OPTIONS="-q dx"
 
 # Millso_Dual (Dual USB Device)
 # Uncomment and adjust if using this interface
