--- a/.env
+++ b/.env
@@ -57,37 +57,6 @@
 #NOMADNET_CONFIG=/home/bsb/.nomadnetwork
 #NOMADNET_AUTOSTART=True
 
-# Direwolf default configuration directory and startup mode
-#DIREWOLF_CONFIG=/home/bsb/.direwolf
-#DIREWOLF_OPTIONS=-q dx
-#DIREWOLF_AUTOSTART=False
-#
-# Direwolf default interface name
-#DIREWOLF_INTERFACE_NAME=default
-#
-# Direwolf default interface device configuration
-#DIREWOLF_SOUND_CARD=1
-#DIREWOLF_DUAL_SOUND_CARD=No
-#DIREWOLF_INPUT_SOUND_CARD=1
-#DIREWOLF_OUTPUT_SOUND_CARD=1
-#
-# Direwolf default amixer content values
-#DIREWOLF_MIC_CAPTURE_SWITCH=on
-#DIREWOLF_MIC_CAPTURE_VOLUME=80%
-#DIREWOLF_MIC_PLAYBACK_SWITCH=off
-#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
-#DIREWOLF_AUTO_GAIN_CONTROL=off
-#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
-#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
-
-# Default soundmodem configuration
-#SOUNDMODEM_CONFIG=/home/bsb/.soundmodem
-#SOUNDMODEM_AUTOSTART=False
-#SOUNDMODEM_SOUND_CARD=1
-#SOUNDMODEM_SPEAKER_VOLUME=80%
-#SOUNDMODEM_MIC_VOLUME=80%
-#SOUNDMODEM_MIC_AGC=off
-
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
 #NEXUS_CONFIG=/home/bsb/.nexus
@@ -104,9 +73,53 @@
 #DJANGO_SUPERUSER_EMAIL=admin@example.com
 #DJANGO_LOG_LEVEL=debug
 
+################################################################
+# Modem configuration
+
+#DIREWOLF_CONFIG=/home/bsb/.direwolf
+#DIREWOLF_OPTIONS=-q dx
+#DIREWOLF_AUTOSTART=False
+
+# Default soundmodem configuration
+#SOUNDMODEM_CONFIG=/home/bsb/.soundmodem
+#SOUNDMODEM_AUTOSTART=False
+#SOUNDMODEM_SOUND_CARD=1
+#SOUNDMODEM_SPEAKER_VOLUME=80%
+#SOUNDMODEM_MIC_VOLUME=80%
+#SOUNDMODEM_MIC_AGC=off
+
+################################################################
+# Direwolf sound device configuration
+
 # Direwolf core options
 DIREWOLF_AUTOSTART=True
 DIREWOLF_OPTIONS="-q dx"
+
+# Direwolf default interface name
+#DIREWOLF_INTERFACE_NAME=default
+#DIREWOLF_SOUND_CARD=1
+#DIREWOLF_DUAL_SOUND_CARD=No
+#DIREWOLF_INPUT_SOUND_CARD=1
+#DIREWOLF_OUTPUT_SOUND_CARD=1
+#DIREWOLF_MIC_CAPTURE_SWITCH=on
+#DIREWOLF_MIC_CAPTURE_VOLUME=80%
+#DIREWOLF_MIC_PLAYBACK_SWITCH=off
+#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
+#DIREWOLF_AUTO_GAIN_CONTROL=off
+#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
+#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
+
+# Millso_Singlel (USB Device)
+# Uncomment and adjust if using this interface
+#DIREWOLF_INTERFACE_NAME=Millso_Single
+#DIREWOLF_OUTPUT_SOUND_CARD=2
+#DIREWOLF_MIC_CAPTURE_SWITCH=on
+#DIREWOLF_MIC_CAPTURE_VOLUME=80%
+#DIREWOLF_MIC_PLAYBACK_SWITCH=off
+#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
+#DIREWOLF_AUTO_GAIN_CONTROL=off
+#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
+#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
 
 # Millso_Dual (Dual USB Device)
 # Uncomment and adjust if using this interface
@@ -131,11 +144,12 @@ DIREWOLF_OPTIONS="-q dx"
 
 # Behringer_UMC22 (USB CODEC)
 # Uncomment and adjust if using this interface
-DIREWOLF_INTERFACE_NAME=Behringer_UMC22
-DIREWOLF_SOUND_CARD=2
-DIREWOLF_PCM_PLAYBACK_SWITCH=on
-DIREWOLF_PCM_PLAYBACK_VOLUME=100%
+#DIREWOLF_INTERFACE_NAME=Behringer_UMC22
+#DIREWOLF_SOUND_CARD=2
+#DIREWOLF_PCM_PLAYBACK_SWITCH=on
+#DIREWOLF_PCM_PLAYBACK_VOLUME=100%
 
+################################################################
 # My personal default development configuration
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
