Millso Solo Test

--- a/.env
+++ b/.env
@@ -109,17 +109,17 @@ DIREWOLF_OPTIONS="-q dx"
 #DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
 #DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
 
-# Millso_Singlel (USB Device)
+# Millso_Single (USB Device)
 # Uncomment and adjust if using this interface
-#DIREWOLF_INTERFACE_NAME=Millso_Single
-#DIREWOLF_OUTPUT_SOUND_CARD=2
-#DIREWOLF_MIC_CAPTURE_SWITCH=on
-#DIREWOLF_MIC_CAPTURE_VOLUME=80%
-#DIREWOLF_MIC_PLAYBACK_SWITCH=off
-#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
-#DIREWOLF_AUTO_GAIN_CONTROL=off
-#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
-#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
+DIREWOLF_INTERFACE_NAME=Millso_Single
+DIREWOLF_OUTPUT_SOUND_CARD=2
+DIREWOLF_MIC_CAPTURE_SWITCH=on
+DIREWOLF_MIC_CAPTURE_VOLUME=80%
+DIREWOLF_MIC_PLAYBACK_SWITCH=off
+DIREWOLF_MIC_PLAYBACK_VOLUME=0%
+DIREWOLF_AUTO_GAIN_CONTROL=off
+DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
+DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
 
 # Millso_Dual (Dual USB Device)
 # Uncomment and adjust if using this interface
