Millso Solo Test

--- a/.env
+++ b/.env
@@ -112,7 +112,7 @@ DIREWOLF_OPTIONS="-q dx"
 # Millso_Single (USB Device)
 # Uncomment and adjust if using this interface
 DIREWOLF_INTERFACE_NAME=Millso_Single
-DIREWOLF_OUTPUT_SOUND_CARD=2
+DIREWOLF_SOUND_CARD=2
 DIREWOLF_MIC_CAPTURE_SWITCH=on
 DIREWOLF_MIC_CAPTURE_VOLUME=80%
 DIREWOLF_MIC_PLAYBACK_SWITCH=off
