Millso Solo Test

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #
 # Environment used by docker-compose
 #
-# git clone -b django https://github.com/HarlekinSimplex/nexus.git
+# git clone -b development https://github.com/HarlekinSimplex/nexus.git
 # docker run --rm -it \
 #  -v "$(pwd)"/nexus_root/.reticulum:/home/bsb/.reticulum \
 #  -v "$(pwd)"/nexus_root/.nomadnetwork:/home/bsb/.nomadnetwork \
