--- a/.env
+++ b/.env
@@ -93,7 +93,7 @@
 
 # Direwolf core options
 DIREWOLF_AUTOSTART=True
-DIREWOLF_OPTIONS="-q dx"
+DIREWOLF_OPTIONS="-q dx -T %T -X 1"
 
 # Direwolf default interface name
 #DIREWOLF_INTERFACE_NAME=default
