--- a/nexus_root/.direwolf/Behringer_UMC22.conf_1.conf
+++ b/nexus_root/.direwolf/Behringer_UMC22.conf_1.conf
@@ -12,7 +12,7 @@ ACHANNELS 2
 
 # Left Channel (Mic/Line 1 Socket)
 CHANNEL 0
-MYCALL N1CALL
+MYCALL N1CALL-0
 MODEM 1200
 FULLDUP OFF
 DWAIT 10
@@ -36,3 +36,8 @@ TXTAIL 10
 # 10s Test Beacon
 #
 # OBEACON comment="CB.ch52 Nexus Beacon #2" sendto=1 delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+
+###########################################
+# TCP/IP Kiss Port
+#
+KISSPORT 8001
