--- a/nexus_root/.direwolf/Millso_Single_1.conf
+++ b/nexus_root/.direwolf/Millso_Single_1.conf
@@ -2,8 +2,8 @@
 # OPI4 with two Millso USB Sound Cards
 # ADEVICE <input> <output>
 #
-ADEVICE plughw:3,0 plughw:2,0
-MYCALL N1CALL
+ADEVICE plughw:2,0
+MYCALL N1CALL-0
 CHANNEL 0
 MODEM 1200
 FULLDUP OFF
@@ -16,5 +16,4 @@ TXTAIL 10
 ###########################################
 # 10s Test Beacon
 #
-# OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
-
+OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
