--- a/nexus_root/.direwolf/default_1.conf
+++ b/nexus_root/.direwolf/default_1.conf
@@ -3,7 +3,7 @@
 #
 ADEVICE  plughw:0,0
 CHANNEL 0
-MYCALL NOCALL
+MYCALL N1CALL-0
 DWAIT 10
 SLOTTIME 30
 PERSIST 160
@@ -19,3 +19,7 @@ TXTAIL 10
 # OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 # OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
+###########################################
+# TCP/IP Kiss Port
+#
+KISSPORT 8001
