Add Multiple TCP/IP Kiss interfaces and remove soundmodem

--- a/.env
+++ b/.env
@@ -85,7 +85,7 @@
 
 # Direwolf core options
 DIREWOLF_AUTOSTART=True
-DIREWOLF_OPTIONS="-q dx -T %T -X 1"
+DIREWOLF_OPTIONS="-q dx -T %T"
 
 # Direwolf default interface name
 #DIREWOLF_INTERFACE_NAME=default
