Multiple TCP/IP Kiss interface konfiguration

--- a/nexus_root/.direwolf/default_1.conf
+++ b/nexus_root/.direwolf/default_1.conf
@@ -13,8 +13,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-# OBEACON comment="CB.ch52 Nexus Beacon #1" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
-# OBEACON comment="CB.ch52 Nexus Beacon #2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+# OBEACON comment="CB.ch52 Nexus Beacon" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
