Multiple TCP/IP Kiss interface konfiguration

--- a/.env
+++ b/.env
@@ -88,21 +88,27 @@ DIREWOLF_AUTOSTART=True
 DIREWOLF_OPTIONS="-q dx -T %T"
 
 # Direwolf default interface name
-#DIREWOLF_INTERFACE_NAME=default
-#DIREWOLF_SOUND_CARD=1
-#DIREWOLF_DUAL_SOUND_CARD=No
-#DIREWOLF_INPUT_SOUND_CARD=1
-#DIREWOLF_OUTPUT_SOUND_CARD=1
-#DIREWOLF_MIC_CAPTURE_SWITCH=on
-#DIREWOLF_MIC_CAPTURE_VOLUME=80%
-#DIREWOLF_MIC_PLAYBACK_SWITCH=off
-#DIREWOLF_MIC_PLAYBACK_VOLUME=0%
-#DIREWOLF_AUTO_GAIN_CONTROL=off
-#DIREWOLF_SPEAKER_PLAYBACK_SWITCH=on
-#DIREWOLF_SPEAKER_PLAYBACK_VOLUME=80%
+# Specs for DIREWOLF_INTERFACE_NAME=default_1
+DIREWOLF_DEFAULT_1_SOUND_CARD=1
+DIREWOLF_DEFAULT_1_DUAL_SOUND_CARD=No
+DIREWOLF_DEFAULT_1_INPUT_SOUND_CARD=1
+DIREWOLF_DEFAULT_1_OUTPUT_SOUND_CARD=1
+DIREWOLF_DEFAULT_1_MIC_CAPTURE_SWITCH=on
+DIREWOLF_DEFAULT_1_MIC_CAPTURE_VOLUME=80%
+DIREWOLF_DEFAULT_1_MIC_PLAYBACK_SWITCH=off
+DIREWOLF_DEFAULT_1_MIC_PLAYBACK_VOLUME=0%
+DIREWOLF_DEFAULT_1_AUTO_GAIN_CONTROL=off
+DIREWOLF_DEFAULT_1_SPEAKER_PLAYBACK_SWITCH=on
+DIREWOLF_DEFAULT_1_SPEAKER_PLAYBACK_VOLUME=80%
+
+# Yaesu_FT-991A (CAT/USB CODEC)
+# Specs for DIREWOLF_INTERFACE_NAME=Yeasu_FT991A_1
+DIREWOLF_YAESU_FT991A_1_SOUND_CARD=1
+DIREWOLF_YAESU_FT991A_1_PCM_PLAYBACK_SWITCH=on
+DIREWOLF_YAESU_FT991A_1_PCM_PLAYBACK_VOLUME=80%
 
 # Millso_Single (USB Device)
-# Uncomment and adjust if using this interface
+# Specs for DIREWOLF_INTERFACE_NAME=Millso_1
 DIREWOLF_MILLSO_1_SOUND_CARD=2
 DIREWOLF_MILLSO_1_MIC_CAPTURE_SWITCH=on
 DIREWOLF_MILLSO_1_MIC_CAPTURE_VOLUME=80%
@@ -111,13 +117,24 @@ DIREWOLF_MILLSO_1_MIC_PLAYBACK_SWITCH=off
 DIREWOLF_MILLSO_1_MIC_PLAYBACK_VOLUME=0%
 DIREWOLF_MILLSO_1_SPEAKER_PLAYBACK_SWITCH=on
 DIREWOLF_MILLSO_1_SPEAKER_PLAYBACK_VOLUME=80%
-
-# Yaesu_FT-991A (CAT/USB CODEC)
-# Uncomment and adjust if using this interface
-#DIREWOLF_INTERFACE_NAME=Yaesu_FT-991A
-#DIREWOLF_SOUND_CARD=1
-#DIREWOLF_PCM_PLAYBACK_SWITCH=on
-#DIREWOLF_PCM_PLAYBACK_VOLUME=80%
+# Specs for DIREWOLF_INTERFACE_NAME=Millso_2
+DIREWOLF_MILLSO_2_SOUND_CARD=3
+DIREWOLF_MILLSO_2_MIC_CAPTURE_SWITCH=on
+DIREWOLF_MILLSO_2_MIC_CAPTURE_VOLUME=80%
+DIREWOLF_MILLSO_2_AUTO_GAIN_CONTROL=off
+DIREWOLF_MILLSO_2_MIC_PLAYBACK_SWITCH=off
+DIREWOLF_MILLSO_2_MIC_PLAYBACK_VOLUME=0%
+DIREWOLF_MILLSO_2_SPEAKER_PLAYBACK_SWITCH=on
+DIREWOLF_MILLSO_2_SPEAKER_PLAYBACK_VOLUME=80%
+# Specs for DIREWOLF_INTERFACE_NAME=Millso_3
+DIREWOLF_MILLSO_3_SOUND_CARD=4
+DIREWOLF_MILLSO_3_MIC_CAPTURE_SWITCH=on
+DIREWOLF_MILLSO_3_MIC_CAPTURE_VOLUME=80%
+DIREWOLF_MILLSO_3_AUTO_GAIN_CONTROL=off
+DIREWOLF_MILLSO_3_MIC_PLAYBACK_SWITCH=off
+DIREWOLF_MILLSO_3_MIC_PLAYBACK_VOLUME=0%
+DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_SWITCH=on
+DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_VOLUME=80%
 
 ################################################################
 # My personal default development configuration
@@ -144,7 +161,7 @@ DIREWOLF_MILLSO_1_SPEAKER_PLAYBACK_VOLUME=80%
 #NEXUS_COMMAND=start_nexus.sh
 
 # OPI4
-DIREWOLF_INSTANCES=MILLSO_1
+DIREWOLF_INSTANCES="Millso_1 Millso_2 Millso_3"
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
 NEXUS_COMPOSE_HOME=~/nexus
@@ -159,6 +176,7 @@ NEXUS_ROLE={"cluster":"lora"}
 #NEXUS_TIMEOUT=70
 
 # Radiobox
+#DIREWOLF_INSTANCES=Yaesu_FT991A_1
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/bsb.nexus
