--- a/nexus_root/.direwolf/Millso_3.conf
+++ b/nexus_root/.direwolf/Millso_3.conf
@@ -16,7 +16,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-# OBEACON comment="CB.ch52 Nexus Beacon" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+OBEACON comment="CB.ch52 Nexus Beacon M3" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
