Multiple TCP/IP Kiss interface konfiguration

--- a/.env
+++ b/.env
@@ -161,7 +161,7 @@ DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_VOLUME=80%
 #NEXUS_COMMAND=start_nexus.sh
 
 # OPI4
-DIREWOLF_INSTANCES="Millso_1 Millso_2 Millso_3"
+DIREWOLF_INSTANCES=Millso_1
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
 NEXUS_COMPOSE_HOME=~/nexus
