--- a/nexus_root/.reticulum/config
+++ b/nexus_root/.reticulum/config
@@ -47,14 +47,14 @@
 
   [[TCP KISS Interface #2]]
     type = TCPClientInterface
-    interface_enabled = True
+    interface_enabled = False
     kiss_framing = True
     target_host = 127.0.0.1
     target_port = 8101
 
   [[TCP KISS Interface #3]]
     type = TCPClientInterface
-    interface_enabled = True
+    interface_enabled = False
     kiss_framing = True
     target_host = 127.0.0.1
     target_port = 8201
