USB Port Name based device names

--- a/nexus_root/.direwolf/Millso_1.conf
+++ b/nexus_root/.direwolf/Millso_1.conf
@@ -2,7 +2,8 @@
 # OPI4 with two Millso USB Sound Cards
 # ADEVICE <input> <output>
 #
-ADEVICE plughw:2,0
+#ADEVICE plughw:2,0
+ADEVICE Alpha
 MYCALL N1CALL-0
 CHANNEL 0
 MODEM 1200
