USB Port Name based device names

--- a/nexus_root/.direwolf/Millso_2.conf
+++ b/nexus_root/.direwolf/Millso_2.conf
@@ -2,7 +2,7 @@
 # OPI4 with two Millso USB Sound Cards
 # ADEVICE <input> <output>
 #
-ADEVICE plughw:3,0
+ADEVICE plughw:Bravo,0
 MYCALL N1CALL-0
 CHANNEL 0
 MODEM 1200
