--- a/nexus_root/.direwolf/Millso_1.conf
+++ b/nexus_root/.direwolf/Millso_1.conf
@@ -2,8 +2,7 @@
 # OPI4 with two Millso USB Sound Cards
 # ADEVICE <input> <output>
 #
-#ADEVICE plughw:2,0
-ADEVICE "Alpha"
+ADEVICE plughw:Alpha,0
 MYCALL N1CALL-0
 CHANNEL 0
 MODEM 1200
