--- a/nexus_root/.direwolf/Millso_3.conf
+++ b/nexus_root/.direwolf/Millso_3.conf
@@ -2,7 +2,7 @@
 # OPI4 with two Millso USB Sound Cards
 # ADEVICE <input> <output>
 #
-ADEVICE plughw:4,0
+ADEVICE plughw:Charlie,0
 MYCALL N1CALL-0
 CHANNEL 0
 MODEM 1200
