USB Port Name based device names

--- a/.env
+++ b/.env
@@ -160,7 +160,7 @@ DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_VOLUME=80%
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
 
-# OPI4
+# Orange  Karlchen / Paulchen
 DIREWOLF_INSTANCES=Millso_1
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
@@ -170,8 +170,8 @@ NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 NEXUS_CONTAINER=nexus-orangepi
 NEXUS_CONTAINER_ALIAS=nexus-orangepi
 NEXUS_NETWORK=nexus-orange_net
-NEXUS_ASPECT=delta
-NEXUS_ROLE={"cluster":"lora"}
+NEXUS_ASPECT=home
+NEXUS_ROLE={"cluster":"home"}
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 
