USB Port Name based device names

--- a/.env
+++ b/.env
@@ -153,7 +153,7 @@ DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_VOLUME=80%
 #NEXUS_CONTAINER=nexus-cockpit
 #NEXUS_CONTAINER_ALIAS=nexus-cockpit
 #NEXUS_NETWORK=nexus-cockpit_net
-#NEXUS_ASPECT=cocpit
+#NEXUS_ASPECT=cockpit
 ##NEXUS_LONGPOLL=60
 ##NEXUS_TIMEOUT=70
 #NEXUS_ROLE={"cluster":"cockpit"}
