--- a/nexus_root/.direwolf/Yaesu_FT991A_1.conf
+++ b/nexus_root/.direwolf/Yaesu_FT991A_1.conf
@@ -1,7 +1,7 @@
 ###########################################
 # RPi4B with Yaesu FT991A using USB CAT
 #
-ADEVICE  plughw:1,0
+ADEVICE  plughw:CODEC,0
 CHANNEL 0
 MYCALL N1CALL-0
 PTT /dev/ttyCAT RTS
