Audio device templates rework

--- a/.env
+++ b/.env
@@ -5,7 +5,6 @@
 # docker run --rm -it \
 #  -v "$(pwd)"/nexus_root/.reticulum:/home/bsb/.reticulum \
 #  -v "$(pwd)"/nexus_root/.nomadnetwork:/home/bsb/.nomadnetwork \
-#  -v "$(pwd)"/nexus_root/.soundmodem:/home/bsb/.soundmodem \
 #  -v "$(pwd)"/nexus_root/.direwolf:/home/bsb/.direwolf \
 #  -v "$(pwd)"/nexus_root/.nexus:/home/bsb/.nexus \
 #  --device /dev/snd:/dev/snd \
@@ -74,67 +73,34 @@
 #DJANGO_LOG_LEVEL=debug
 
 ################################################################
-# Modem configuration
-
-#DIREWOLF_CONFIG=/home/bsb/.direwolf
-#DIREWOLF_OPTIONS=-q dx
-#DIREWOLF_AUTOSTART=False
-
-################################################################
 # Direwolf sound device configuration
 
 # Direwolf core options
-DIREWOLF_AUTOSTART=True
-DIREWOLF_OPTIONS="-q dx -T %T"
+#DIREWOLF_CONFIG=/home/bsb/.direwolf
+#DIREWOLF_AUTOSTART=False
+#DIREWOLF_OPTIONS="-T 0 -q dx -T %T"
 
-# Direwolf default interface name
-# Specs for DIREWOLF_INTERFACE_NAME=default_1
-DIREWOLF_DEFAULT_1_SOUND_CARD=1
-DIREWOLF_DEFAULT_1_DUAL_SOUND_CARD=No
-DIREWOLF_DEFAULT_1_INPUT_SOUND_CARD=1
-DIREWOLF_DEFAULT_1_OUTPUT_SOUND_CARD=1
-DIREWOLF_DEFAULT_1_MIC_CAPTURE_SWITCH=on
-DIREWOLF_DEFAULT_1_MIC_CAPTURE_VOLUME=80%
-DIREWOLF_DEFAULT_1_MIC_PLAYBACK_SWITCH=off
-DIREWOLF_DEFAULT_1_MIC_PLAYBACK_VOLUME=0%
-DIREWOLF_DEFAULT_1_AUTO_GAIN_CONTROL=off
-DIREWOLF_DEFAULT_1_SPEAKER_PLAYBACK_SWITCH=on
-DIREWOLF_DEFAULT_1_SPEAKER_PLAYBACK_VOLUME=80%
+# --------------------------------------------------------
+# Specs for USB sound device configuration VOX_ALPHA_1
+# --------------------------------------------------------
+#DIREWOLF_VOX_ALPHA_1_SOUND_CARD=Alpha
+#DIREWOLF_VOX_ALPHA_1_DUAL_SOUND_CARD=No
+#DIREWOLF_VOX_ALPHA_1_INPUT_SOUND_CARD=Alpha
+#DIREWOLF_VOX_ALPHA_1_OUTPUT_SOUND_CARD=Alpha
+#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_SWITCH=on
+#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=80%
+#DIREWOLF_VOX_ALPHA_1_MIC_PLAYBACK_SWITCH=off
+#DIREWOLF_VOX_ALPHA_1_MIC_PLAYBACK_VOLUME=0%
+#DIREWOLF_VOX_ALPHA_1_AUTO_GAIN_CONTROL=off
+#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_SWITCH=on
+#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=80%
 
-# Yaesu_FT-991A (CAT/USB CODEC)
-# Specs for DIREWOLF_INTERFACE_NAME=Yeasu_FT991A_1
-DIREWOLF_YAESU_FT991A_1_SOUND_CARD=1
-DIREWOLF_YAESU_FT991A_1_PCM_PLAYBACK_SWITCH=on
-DIREWOLF_YAESU_FT991A_1_PCM_PLAYBACK_VOLUME=80%
-
-# Millso_Single (USB Device)
-# Specs for DIREWOLF_INTERFACE_NAME=Millso_1
-DIREWOLF_MILLSO_1_SOUND_CARD=Alpha
-DIREWOLF_MILLSO_1_MIC_CAPTURE_SWITCH=on
-DIREWOLF_MILLSO_1_MIC_CAPTURE_VOLUME=80%
-DIREWOLF_MILLSO_1_AUTO_GAIN_CONTROL=off
-DIREWOLF_MILLSO_1_MIC_PLAYBACK_SWITCH=off
-DIREWOLF_MILLSO_1_MIC_PLAYBACK_VOLUME=0%
-DIREWOLF_MILLSO_1_SPEAKER_PLAYBACK_SWITCH=on
-DIREWOLF_MILLSO_1_SPEAKER_PLAYBACK_VOLUME=80%
-# Specs for DIREWOLF_INTERFACE_NAME=Millso_2
-DIREWOLF_MILLSO_2_SOUND_CARD=Bravo
-DIREWOLF_MILLSO_2_MIC_CAPTURE_SWITCH=on
-DIREWOLF_MILLSO_2_MIC_CAPTURE_VOLUME=80%
-DIREWOLF_MILLSO_2_AUTO_GAIN_CONTROL=off
-DIREWOLF_MILLSO_2_MIC_PLAYBACK_SWITCH=off
-DIREWOLF_MILLSO_2_MIC_PLAYBACK_VOLUME=0%
-DIREWOLF_MILLSO_2_SPEAKER_PLAYBACK_SWITCH=on
-DIREWOLF_MILLSO_2_SPEAKER_PLAYBACK_VOLUME=80%
-# Specs for DIREWOLF_INTERFACE_NAME=Millso_3
-DIREWOLF_MILLSO_3_SOUND_CARD=Charlie
-DIREWOLF_MILLSO_3_MIC_CAPTURE_SWITCH=on
-DIREWOLF_MILLSO_3_MIC_CAPTURE_VOLUME=80%
-DIREWOLF_MILLSO_3_AUTO_GAIN_CONTROL=off
-DIREWOLF_MILLSO_3_MIC_PLAYBACK_SWITCH=off
-DIREWOLF_MILLSO_3_MIC_PLAYBACK_VOLUME=0%
-DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_SWITCH=on
-DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_VOLUME=80%
+# --------------------------------------------------------
+# Specs for USB sound device configuration CAT_CODEC_1
+# --------------------------------------------------------
+#DIREWOLF_CAT_CODEC_1_SOUND_CARD=CODEC
+#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_SWITCH=on
+#DIREWOLF_CAT_CODEC_1_PCM_PLAYBACK_VOLUME=80%
 
 ################################################################
 # My personal default development configuration
@@ -160,31 +126,50 @@ DIREWOLF_MILLSO_3_SPEAKER_PLAYBACK_VOLUME=80%
 #NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
 #NEXUS_COMMAND=start_nexus.sh
 
-# Orange  Karlchen / Paulchen
-DIREWOLF_INSTANCES=Millso_1
+# Karlchen / Paulchen
+DIREWOLF_AUTOSTART=True
+DIREWOLF_INSTANCES=VOX_Alpha_1
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
 NEXUS_COMPOSE_HOME=~/nexus
 NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
 NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
 NEXUS_CONTAINER=nexus-orangepi
-NEXUS_CONTAINER_ALIAS=nexus-orangepi
-NEXUS_NETWORK=nexus-orange_net
+NEXUS_CONTAINER_ALIAS=nexus-twins
+NEXUS_NETWORK=nexus-twins_net
 NEXUS_ASPECT=home
 NEXUS_ROLE={"cluster":"home"}
+NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#NEXUS_LONGPOLL=60
+#NEXUS_TIMEOUT=70
+
+# Orange
+#DIREWOLF_AUTOSTART=True
+#DIREWOLF_INSTANCES=VOX_Alpha_1
+#RNS_AUTOSTART=True
+#NOMADNET_AUTOSTART=True
+#NEXUS_COMPOSE_HOME=~/nexus
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#NEXUS_CONTAINER=nexus-orangepi
+#NEXUS_CONTAINER_ALIAS=nexus-orange
+#NEXUS_NETWORK=nexus-orange_net
+#NEXUS_ASPECT=home
+#NEXUS_ROLE={"cluster":"home"}
 #NEXUS_LONGPOLL=60
 #NEXUS_TIMEOUT=70
 
 # Radiobox
-#DIREWOLF_INSTANCES=Yaesu_FT991A_1
+#DIREWOLF_AUTOSTART=True
+#DIREWOLF_INSTANCES=CAT_CODEC_1
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/bsb.nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
-#NEXUS_CONTAINER=nexus-delta
-#NEXUS_CONTAINER_ALIAS=nexus-delta
-#NEXUS_NETWORK=nexus-delta_net
+#NEXUS_CONTAINER=nexus-radiobox
+#NEXUS_CONTAINER_ALIAS=nexus-radiobox
+#NEXUS_NETWORK=nexus-radiobox_net
 #NEXUS_ASPECT=delta
 #NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
 ##NEXUS_LONGPOLL=60
