--- a/nexus_root/.direwolf/CAT_CODEC_1.conf
+++ b/nexus_root/.direwolf/CAT_CODEC_1.conf
@@ -1,10 +1,10 @@
 ###########################################
-# OPI4 with two Millso USB Sound Cards
-# ADEVICE <input> <output>
+# RPi4B with Yaesu FT991A using USB CAT
 #
-ADEVICE plughw:Alpha,0
-MYCALL N1CALL-0
+ADEVICE  plughw:CODEC,0
 CHANNEL 0
+MYCALL N1CALL-0
+PTT /dev/ttyCAT RTS
 MODEM 1200
 FULLDUP OFF
 DWAIT 10
@@ -16,7 +16,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-OBEACON comment="CB.ch52 Nexus Beacon CRT" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+OBEACON comment="Nexus Beacon" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
