--- a/nexus_root/.direwolf/_Templates/Millso_1.conf
+++ b/nexus_root/.direwolf/_Templates/Millso_1.conf
@@ -1,9 +1,12 @@
 ###########################################
-# Default Configuration for internal souncard
+# OPI4 with two Millso USB Sound Cards
+# ADEVICE <input> <output>
 #
-ADEVICE  plughw:0,0
+ADEVICE plughw:Alpha,0
 CHANNEL 0
 MYCALL N1CALL-0
+MODEM 1200
+FULLDUP OFF
 DWAIT 10
 SLOTTIME 30
 PERSIST 160
@@ -13,7 +16,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-# OBEACON comment="CB.ch52 Nexus Beacon" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+OBEACON comment="Nexus Beacon M1" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
