--- a/nexus_root/.direwolf/_Templates/Millso_2.conf
+++ b/nexus_root/.direwolf/_Templates/Millso_2.conf
@@ -1,10 +1,10 @@
 ###########################################
-# RPi4B with Yaesu FT991A using USB CAT
+# OPI4 with two Millso USB Sound Cards
+# ADEVICE <input> <output>
 #
-ADEVICE  plughw:CODEC,0
+ADEVICE plughw:Bravo,0
 CHANNEL 0
 MYCALL N1CALL-0
-PTT /dev/ttyCAT RTS
 MODEM 1200
 FULLDUP OFF
 DWAIT 10
@@ -16,11 +16,11 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-# OBEACON comment="CB.ch52 Nexus Beacon" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+OBEACON comment="Nexus Beacon M2" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
 #
-AGWPORT 8000
-KISSPORT 8001
+AGWPORT 8100
+KISSPORT 8101
 
