--- a/nexus_root/.direwolf/_Templates/Millso_3.conf
+++ b/nexus_root/.direwolf/_Templates/Millso_3.conf
@@ -3,8 +3,8 @@
 # ADEVICE <input> <output>
 #
 ADEVICE plughw:Charlie,0
-MYCALL N1CALL-0
 CHANNEL 0
+MYCALL N1CALL-0
 MODEM 1200
 FULLDUP OFF
 DWAIT 10
@@ -16,7 +16,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-OBEACON comment="CB.ch52 Nexus Beacon M3" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+OBEACON comment="Nexus Beacon M3" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
