--- a/nexus_root/.direwolf/internal_1.conf
+++ b/nexus_root/.direwolf/internal_1.conf
@@ -1,10 +1,10 @@
 ###########################################
-# OPI4 with two Millso USB Sound Cards
+# Default Configuration for internal soundcard
 # ADEVICE <input> <output>
 #
-ADEVICE plughw:Bravo,0
-MYCALL N1CALL-0
+ADEVICE  plughw:0,0
 CHANNEL 0
+MYCALL N1CALL-0
 MODEM 1200
 FULLDUP OFF
 DWAIT 10
@@ -16,11 +16,11 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-OBEACON comment="CB.ch52 Nexus Beacon M2" delay=0:10 every=0:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
+OBEACON comment="Nexus Beacon" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 freq=26.685 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
 #
-AGWPORT 8100
-KISSPORT 8101
+AGWPORT 8000
+KISSPORT 8001
 
