--- a/.env
+++ b/.env
@@ -164,7 +164,7 @@ NEXUS_RNODE_DEVICE=/dev/ttyACM0
 #DIREWOLF_INSTANCES=CAT_CODEC_1
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
-#NEXUS_COMPOSE_HOME=~/bsb.nexus
+#NEXUS_COMPOSE_HOME=~/nexus
 #NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
 #NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
 #NEXUS_CONTAINER=nexus-radiobox
