--- a/nexus_root/.reticulum/config
+++ b/nexus_root/.reticulum/config
@@ -36,6 +36,8 @@
     codingrate = 5
     id_callsign = NO1CLL-0
     id_interval = 600
+    network_name = myNetName
+    passphrase = myNetPassword
     flow_control = False
 
   [[TCP KISS Interface #1]]
