--- a/nexus_root/.reticulum/config
+++ b/nexus_root/.reticulum/config
@@ -46,6 +46,8 @@
     kiss_framing = True
     target_host = 127.0.0.1
     target_port = 8001
+    network_name = myNetName
+    passphrase = myNetPassword
 
   [[TCP KISS Interface #2]]
     type = TCPClientInterface
@@ -53,6 +55,8 @@
     kiss_framing = True
     target_host = 127.0.0.1
     target_port = 8101
+    network_name = myNetName
+    passphrase = myNetPassword
 
   [[TCP KISS Interface #3]]
     type = TCPClientInterface
@@ -60,36 +64,5 @@
     kiss_framing = True
     target_host = 127.0.0.1
     target_port = 8201
-
-  [[Packet Radio KISS Interface]]
-    type = KISSInterface
-    interface_enabled = False
-    outgoing = true
-    port = /tmp/kisstnc
-    speed = 115200
-    databits = 8
-    parity = none
-    stopbits = 1
-    slottime = 300
-    txtail = 100
-    id_callsign = NO1CLL-0
-    id_interval = 600
-    flow_control = false
-
-  [[Packet Radio AX.25 KISS Interface]]
-    type = AX25KISSInterface
-    callsign = NO1CLL-0
-    ssid = 0
-    interface_enabled = False
-    outgoing = true
-    port = /tmp/kisstnc
-    speed = 115200
-    databits = 8
-    parity = none
-    stopbits = 1
-    preamble = 300
-    slottime = 300
-    txdelay = 50
-    txtail = 100
-    flow_control = false
-    persistence = 200
+    network_name = myNetName
+    passphrase = myNetPassword
