--- a/nexus_root/.reticulum/config
+++ b/nexus_root/.reticulum/config
@@ -26,7 +26,7 @@
 
   [[RNode LoRa Interface]]
     type = RNodeInterface
-    interface_enabled = False
+    interface_enabled = True
     outgoing = True
     port = /dev/ttyRNODE
     frequency = 867200000
