LoRa Config rework

--- a/.env
+++ b/.env
@@ -144,6 +144,7 @@
 #NEXUS_TIMEOUT=70
 
 # Orange
+RNS_CONFIG=/home/bsb/.reticulum/orange
 DIREWOLF_AUTOSTART=True
 #DIREWOLF_INSTANCES=VOX_Alpha_1
 DIREWOLF_INSTANCES=VOX_Charlie_1
