Interface rework CRT

--- a/.env
+++ b/.env
@@ -144,10 +144,12 @@
 #NEXUS_TIMEOUT=70
 
 # Orange
-RNS_CONFIG=/home/bsb/.reticulum/orange
 DIREWOLF_AUTOSTART=True
 #DIREWOLF_INSTANCES=VOX_Alpha_1
 DIREWOLF_INSTANCES=VOX_Charlie_1
+DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=70%
+DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
+RNS_CONFIG=/home/bsb/.reticulum/orange
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
 NEXUS_COMPOSE_HOME=~/nexus
