Interface rework CRT

--- a/.env
+++ b/.env
@@ -144,11 +144,14 @@
 #NEXUS_TIMEOUT=70
 
 # Orange
+DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
 DIREWOLF_AUTOSTART=True
-#DIREWOLF_INSTANCES=VOX_Alpha_1
-DIREWOLF_INSTANCES=VOX_Charlie_1
-DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=70%
-DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
+DIREWOLF_INSTANCES=VOX_Alpha_1
+DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=80%
+DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=80%
+#DIREWOLF_INSTANCES=VOX_Charlie_1
+#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=70%
+#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
 RNS_CONFIG=/home/bsb/.reticulum/orange
 RNS_AUTOSTART=True
 NOMADNET_AUTOSTART=True
