--- a/nexus_root/.direwolf/orange/VOX_Charlie_1.conf
+++ b/nexus_root/.direwolf/orange/VOX_Charlie_1.conf
@@ -21,7 +21,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-OBEACON comment="Nexus Beacon" delay=0:10 every=10:00 OBJNAME=Nexus lat=0^0.0 long=0^0.0 dest=CQ
+OBEACON comment="Nexus Beacon Orange" delay=0:10 every=00:10 OBJNAME=Nexus@Orange lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
