Interface rework CRT

--- a/.env
+++ b/.env
@@ -144,42 +144,44 @@
 #NEXUS_TIMEOUT=70
 
 # Orange
-DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
-DIREWOLF_AUTOSTART=True
-DIREWOLF_INSTANCES=VOX_Alpha_1
-DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=70%
-DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
-#DIREWOLF_INSTANCES=VOX_Charlie_1
-#DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=70%
-#DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
-RNS_CONFIG=/home/bsb/.reticulum/orange
-RNS_AUTOSTART=True
-NOMADNET_AUTOSTART=True
-NEXUS_COMPOSE_HOME=~/nexus
-NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
-NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
-NEXUS_CONTAINER=nexus-orange
-NEXUS_CONTAINER_ALIAS=nexus-orange
-NEXUS_NETWORK=nexus-orange_net
-NEXUS_ASPECT=home
-NEXUS_ROLE={"cluster":"home"}
-#NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=70
-
-# Radiobox
+#DIREWOLF_CONFIG=/home/bsb/.direwolf/orange
 #DIREWOLF_AUTOSTART=True
-#DIREWOLF_INSTANCES=CAT_CODEC_1
+#DIREWOLF_INSTANCES=VOX_Alpha_1
+#DIREWOLF_VOX_ALPHA_1_MIC_CAPTURE_VOLUME=70%
+#DIREWOLF_VOX_ALPHA_1_SPEAKER_PLAYBACK_VOLUME=70%
+##DIREWOLF_INSTANCES=VOX_Charlie_1
+##DIREWOLF_VOX_CHARLIE_1_MIC_CAPTURE_VOLUME=70%
+##DIREWOLF_VOX_CHARLIE_1_SPEAKER_PLAYBACK_VOLUME=70%
+#RNS_CONFIG=/home/bsb/.reticulum/orange
 #RNS_AUTOSTART=True
 #NOMADNET_AUTOSTART=True
 #NEXUS_COMPOSE_HOME=~/nexus
-#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
-#NEXUS_CONTAINER=nexus-radiobox
-#NEXUS_CONTAINER_ALIAS=nexus-radiobox
-#NEXUS_NETWORK=nexus-radiobox_net
-#NEXUS_ASPECT=delta
-#NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm64
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm64
+#NEXUS_CONTAINER=nexus-orange
+#NEXUS_CONTAINER_ALIAS=nexus-orange
+#NEXUS_NETWORK=nexus-orange_net
+#NEXUS_ASPECT=home
+#NEXUS_ROLE={"cluster":"home"}
 ##NEXUS_LONGPOLL=60
 ##NEXUS_TIMEOUT=70
-#NEXUS_RNODE_DEVICE=/dev/ttyACM0
-#NEXUS_CAT_DEVICE=/dev/ttyUSB1
+
+# Radiobox
+DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
+DIREWOLF_AUTOSTART=True
+DIREWOLF_INSTANCES=CAT_CODEC_1
+RNS_CONFIG=/home/bsb/.reticulum/radiobox
+RNS_AUTOSTART=True
+NOMADNET_AUTOSTART=True
+NEXUS_COMPOSE_HOME=~/nexus
+NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
+NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
+NEXUS_CONTAINER=nexus-radiobox
+NEXUS_CONTAINER_ALIAS=nexus-radiobox
+NEXUS_NETWORK=nexus-radiobox_net
+NEXUS_ASPECT=delta
+NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+#NEXUS_LONGPOLL=60
+##NEXUS_TIMEOUT=70
+NEXUS_RNODE_DEVICE=/dev/ttyACM0
+NEXUS_CAT_DEVICE=/dev/ttyUSB1
