--- a/.env
+++ b/.env
@@ -167,21 +167,21 @@
 ##NEXUS_TIMEOUT=70
 
 # Radiobox
-DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
-DIREWOLF_AUTOSTART=True
-DIREWOLF_INSTANCES=CAT_CODEC_1
-RNS_CONFIG=/home/bsb/.reticulum/radiobox
-RNS_AUTOSTART=True
-NOMADNET_AUTOSTART=True
-NEXUS_COMPOSE_HOME=~/nexus
-NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
-NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
-NEXUS_CONTAINER=nexus-radiobox
-NEXUS_CONTAINER_ALIAS=nexus-radiobox
-NEXUS_NETWORK=nexus-radiobox_net
-NEXUS_ASPECT=delta
-NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
-#NEXUS_LONGPOLL=60
+#DIREWOLF_CONFIG=/home/bsb/.direwolf/radiobox
+#DIREWOLF_AUTOSTART=True
+#DIREWOLF_INSTANCES=CAT_CODEC_1
+#RNS_CONFIG=/home/bsb/.reticulum/radiobox
+#RNS_AUTOSTART=True
+#NOMADNET_AUTOSTART=True
+#NEXUS_COMPOSE_HOME=~/nexus
+#NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-arm
+#NEXUS_IMAGE=bsbdock/nexus:dev_linux-arm
+#NEXUS_CONTAINER=nexus-radiobox
+#NEXUS_CONTAINER_ALIAS=nexus-radiobox
+#NEXUS_NETWORK=nexus-radiobox_net
+#NEXUS_ASPECT=delta
+#NEXUS_ROLE={"cluster":"lora","gate":"lora.delta"}
+##NEXUS_LONGPOLL=60
 ##NEXUS_TIMEOUT=70
-NEXUS_RNODE_DEVICE=/dev/ttyACM0
-NEXUS_CAT_DEVICE=/dev/ttyUSB1
+#NEXUS_RNODE_DEVICE=/dev/ttyACM0
+#NEXUS_CAT_DEVICE=/dev/ttyUSB1
