--- a/nexus_root/.direwolf/radiobox/CAT_CODEC_1.conf
+++ b/nexus_root/.direwolf/radiobox/CAT_CODEC_1.conf
@@ -16,7 +16,7 @@ TXTAIL 10
 ###########################################
 # Test Beacon
 #
-OBEACON comment="Nexus Beacon" delay=0:10 every=00:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 dest=CQ
+# OBEACON comment="Nexus Beacon RadioBox" delay=0:10 every=00:10 OBJNAME=Nexus lat=0^0.0 long=0^0.0 dest=CQ
 
 ###########################################
 # TCP/IP Kiss Port
