Interface rework CRT

--- a/.env
+++ b/.env
@@ -161,8 +161,8 @@
 #NEXUS_CONTAINER=nexus-orange
 #NEXUS_CONTAINER_ALIAS=nexus-orange
 #NEXUS_NETWORK=nexus-orange_net
-#NEXUS_ASPECT=home
-#NEXUS_ROLE={"cluster":"home"}
+#NEXUS_ASPECT=delta
+#NEXUS_ROLE={"cluster":"lora"}
 ##NEXUS_LONGPOLL=60
 ##NEXUS_TIMEOUT=70
 
