--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -83,6 +83,9 @@ services:
       - type: bind
         source: ${NEXUS_COMPOSE_HOME:-~/nexus}/${NEXUS_ROOT_BIND:-nexus_root/.direwolf}
         target: ${NEXUS_ROOT:-/home/bsb/.direwolf}
+      - type: bind
+        source: ${NEXUS_GPIO:-/sys/class/gpio/export}
+        target: /sys/class/gpio/export
     logging:
       driver: "json-file"
       options:
